--- a/client/package.json
+++ b/client/package.json
@@ -52,6 +52,7 @@
     "lucide-react": "^0.453.0",
     "next-themes": "^0.4.6",
     "react": "^18.3.1",
+    "react-activity-calendar": "^3.0.5",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.55.0",
