--- a/deploy/Dockerfile.backend
+++ b/deploy/Dockerfile.backend
@@ -1,5 +1,5 @@
 # Build Stage
-FROM eclipse-temurin:17-jdk-alpine AS builder
+FROM amazoncorretto:17-alpine-jdk AS builder
 WORKDIR /app
 
 # Copy gradle wrapper and build files first for caching
@@ -16,7 +16,7 @@ RUN chmod +x ./gradlew
 RUN ./gradlew bootJar --no-daemon
 
 # Run Stage
-FROM eclipse-temurin:17-jdk-alpine
+FROM amazoncorretto:17-alpine-jdk
 WORKDIR /app
 
 # Create a non-root user for security
