fix(docker): Install g++ and python3 for code compilation

--- a/deploy/Dockerfile.backend
+++ b/deploy/Dockerfile.backend
@@ -20,6 +20,9 @@ FROM amazoncorretto:17-alpine-jdk
 WORKDIR /app
 
 # Create a non-root user for security
+# Install g++ and build-base for C++ compilation
+RUN apk add --no-cache g++ build-base python3
+
 RUN addgroup -S spring && adduser -S spring -G spring
 USER spring:spring
 
