docs: rewrite README with full project documentation and clean up unused files
- Rewrite README.md with complete tech stack, project structure, API endpoints, getting started guide, and deployment instructions
- Remove temporary issue/pr body text files (8 files)
- Remove unused AI tool configs (.serena/, .agent/)
- Add ignore patterns for temporary and AI tool files in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,14 @@ target/
 .DS_Store
 
 
+# Temporary files
+issue_body_*.txt
+pr_body_*.txt
+
+# AI tool configs (Serena, Antigravity)
+.serena/
+.agent/
+
 # Editors and Caches
 .local
 .vite
