chore: 인프라 및 설정 정리 — Docker 환경변수 분리, 미사용 코드/의존성 제거, Bean 주입 개선
- docker-compose.yml: version 제거, DB 비밀번호 환경변수 분리
- docker-compose.prod.yml: 하드코딩 경로를 환경변수로 대체
- Dockerfile.backend: 불필요한 npm 패키지 제거
- BOJSyncService: RestTemplate을 Bean 주입으로 전환
- AppConfig: RestTemplate Bean 설정 추가
- queryClient.ts: staleTime을 Infinity에서 5분으로 조정
- package.json: 미사용 의존성 제거 (next-themes, react-activity-calendar, react-icons, drizzle-kit)
- HomeBOJ.tsx, HomeInflearn.tsx: 미사용 페이지 삭제
- auth.ts: 미사용 sessions 테이블 정의 제거
- .gitignore: 중복 .DS_Store 항목 정리

Closes #47

--- a/deploy/Dockerfile.backend
+++ b/deploy/Dockerfile.backend
@@ -21,7 +21,7 @@ WORKDIR /app
 
 # Create a non-root user for security
 # Install g++ and build-base for C++ compilation, and nodejs for JS
-RUN apk add --no-cache g++ build-base python3 nodejs npm
+RUN apk add --no-cache g++ build-base python3 nodejs
 
 RUN addgroup -S spring && adduser -S spring -G spring
 USER spring:spring
