--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -36,6 +36,18 @@
       ],
       "@shared/*": [
         "../shared/*"
+      ],
+      "zod": [
+        "./node_modules/zod"
+      ],
+      "drizzle-orm": [
+        "./node_modules/drizzle-orm"
+      ],
+      "drizzle-orm/*": [
+        "./node_modules/drizzle-orm/*"
+      ],
+      "drizzle-zod": [
+        "./node_modules/drizzle-zod"
       ]
     }
   }
