refactor: 프로젝트명 AlgoArena에서 psgrammers로 변경 및 힌트 버튼 수정
변경사항:

- 프로젝트명 AlgoArena에서 psgrammers로 통일

- 패키지명 com.algoarena에서 com.psgrammers로 변경

- 힌트 버튼을 아이콘에서 텍스트(힌트 보기/숨기기)로 수정

- README에 Changelog 섹션 추가

Ultraworked with [Sisyphus](https://github.com/code-yeongyu/oh-my-opencode)

Co-authored-by: Sisyphus <clio-agent@sisyphuslabs.ai>

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=algoarena
+spring.application.name=psgrammers
 server.port=8080
 
 spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5433/psgrammers}
