fix(ci): ssh-action v1 호환 — script_stop을 set -e로 대체
Ultraworked with [Sisyphus](https://github.com/code-yeongyu/oh-my-opencode)

Co-authored-by: Sisyphus <clio-agent@sisyphuslabs.ai>

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,8 +19,8 @@ jobs:
           host: ${{ secrets.OCI_HOST }}
           username: ${{ secrets.OCI_USER }}
           key: ${{ secrets.OCI_SSH_KEY }}
-          script_stop: true
           script: |
+            set -e
             cd ${{ secrets.OCI_DEPLOY_PATH }}
             git fetch origin main
             git checkout main
