--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,8 +23,7 @@ jobs:
             set -e
             cd ${{ secrets.OCI_DEPLOY_PATH }}
             git fetch origin main
-            git checkout main
-            git reset --hard origin/main
+            git checkout -B main origin/main
             cd deploy
             docker compose -f docker-compose.prod.yml pull
             docker compose -f docker-compose.prod.yml up -d --build
