--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,12 +23,10 @@ jobs:
             set -e
             cd ${{ secrets.OCI_DEPLOY_PATH }}
             if [ -d .git ]; then
-              git fetch --depth=1 origin main
-            else
-              git clone https://github.com/Jyeon324/psgrammers.git .
-              git checkout main
+              rm -rf .git
             fi
-            git reset --hard origin/main
+            git clone https://github.com/Jyeon324/psgrammers.git .
+            git checkout main
             cd deploy
             docker compose -f docker-compose.prod.yml pull
             docker compose -f docker-compose.prod.yml up -d --build
