--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,8 @@ jobs:
           key: ${{ secrets.OCI_SSH_KEY }}
           script: |
             set -e
-            cd ${{ secrets.OCI_DEPLOY_PATH }}
+            DEPLOY_PATH=${{ secrets.OCI_DEPLOY_PATH }}
+            cd $DEPLOY_PATH
             if [ -d .git ]; then
               rm -rf .git
             fi
