fix(deploy): use absolute path

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,9 +32,8 @@ jobs:
             rm -rf psgrammers_old
             mv psgrammers psgrammers_old 2>/dev/null || true
             mv psgrammers_temp psgrammers
-            cd psgrammers/deploy
-            docker compose -f docker-compose.prod.yml pull
-            docker compose -f docker-compose.prod.yml up -d --build
+            docker compose -f $DEPLOY_PATH/psgrammers/deploy/docker-compose.prod.yml pull
+            docker compose -f $DEPLOY_PATH/psgrammers/deploy/docker-compose.prod.yml up -d --build
             docker image prune -f
             cd deploy
             docker compose -f docker-compose.prod.yml pull
