--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,10 +22,12 @@ jobs:
           script: |
             set -e
             DEPLOY_PATH=${{ secrets.OCI_DEPLOY_PATH }}
-            cd $DEPLOY_PATH
-            git fetch origin main
-            git checkout -f main
-            cd deploy
+            PARENT_PATH=$(dirname $DEPLOY_PATH)
+            REPO_NAME=$(basename $DEPLOY_PATH)
+            cd $PARENT_PATH
+            rm -rf $REPO_NAME
+            git clone https://github.com/Jyeon324/psgrammers.git $REPO_NAME
+            cd $DEPLOY_PATH/deploy
             docker compose -f docker-compose.prod.yml pull
             docker compose -f docker-compose.prod.yml up -d --build
             docker image prune -f
