--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,9 +24,15 @@ jobs:
             DEPLOY_PATH=${{ secrets.OCI_DEPLOY_PATH }}
             PARENT_PATH=$(dirname $DEPLOY_PATH)
             REPO_NAME=$(basename $DEPLOY_PATH)
-            cd $PARENT_PATH
-            rm -rf $REPO_NAME
-            git clone https://github.com/Jyeon324/psgrammers.git $REPO_NAME
+            mkdir -p $PARENT_PATH
+            if [ -d "$DEPLOY_PATH/.git" ]; then
+              cd $DEPLOY_PATH
+              git fetch origin main
+              git reset --hard origin/main
+            else
+              cd $PARENT_PATH
+              git clone https://github.com/Jyeon324/psgrammers.git $REPO_NAME
+            fi
             cd $DEPLOY_PATH/deploy
             docker compose -f docker-compose.prod.yml pull
             docker compose -f docker-compose.prod.yml up -d --build
