--- a/deploy/docker-compose.prod.yml
+++ b/deploy/docker-compose.prod.yml
@@ -4,8 +4,8 @@ services:
     container_name: psgrammers-db-prod
     environment:
       POSTGRES_DB: psgrammers
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_USER: ${POSTGRES_USER:-postgres}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-postgres}
     volumes:
       - ${DATA_DIR:-./data}:/var/lib/postgresql/data
     networks:
@@ -19,8 +19,8 @@ services:
     container_name: psgrammers-backend
     environment:
       SPRING_DATASOURCE_URL: jdbc:postgresql://psgrammers-db:5432/psgrammers
-      SPRING_DATASOURCE_USERNAME: ${POSTGRES_USER}
-      SPRING_DATASOURCE_PASSWORD: ${POSTGRES_PASSWORD}
+      SPRING_DATASOURCE_USERNAME: ${POSTGRES_USER:-postgres}
+      SPRING_DATASOURCE_PASSWORD: ${POSTGRES_PASSWORD:-postgres}
     depends_on:
       - psgrammers-db
     networks:
